# mongodb-test

./: Cargo.toml  Dockerfile
src/: client.rs  main.rs
